# teku-izer

./: .gitignore  Cargo.toml
src/: main.rs
ui/: app-window.slint  main-page.slint  menubar.slint  palette.slint  playbar.slint
ui/edited-std-widgets/: slider.slint
ui/pages/: file-page.slint  main-page.slint
ui/slint-built-in/: color-scheme.slint  styling.slint
ui/slint-built-in/common/: slider-base.slint
ui/widgets/: play-button.slint  slim-play-button.slint
