[package]
name = "teku-izer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.17.2"
rodio = "0.22.2"
slint = "1.14.1"
tokio = "1.50.0"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true
