[package]
name = "teku-izer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.5.0"
directories = "6.0.0"
rand = "0.10.1"
rfd = "0.17.2"
rodio = "0.22.2"
slint = { version = "1.14.1", features = ["renderer-skia"] }
tokio = "1.50.0"
trpl = "0.3.0"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true
